--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>AdsGram Global Pro</title>
+    <title>Adsgram Global Pro</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://sad.adsgram.ai/js/sad.min.js"></script>
     <!-- Monetag SDKs -->
@@ -12,117 +13,120 @@
     <script src='//libtl.com/sdk.js' data-zone='10276123' data-sdk='show_10276123'></script>
     
     <style>
-        :root { --tg-theme-bg: #fff; --primary: #2481cc; --success: #28a745; --danger: #dc3545; }
-        body { font-family: -apple-system, sans-serif; background: var(--tg-theme-bg-color, #f4f4f7); color: var(--tg-theme-text-color, #000); margin: 0; padding-bottom: 80px; }
+        :root { --tg-bg: #fff; --primary: #2481cc; --success: #28a745; --danger: #dc3545; }
+        body { font-family: -apple-system, sans-serif; background: var(--tg-theme-bg-color, #f0f2f5); color: var(--tg-theme-text-color, #000); margin: 0; padding-bottom: 80px; transition: 0.3s; }
         .container { padding: 15px; }
-        .page { display: none; animation: slideUp 0.3s ease; }
+        .page { display: none; animation: fadeIn 0.3s ease-in-out; }
         .active { display: block; }
-        @keyframes slideUp { from { transform: translateY(20px); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
 
         /* Navigation */
-        nav { position: fixed; bottom: 0; width: 100%; background: var(--tg-theme-secondary-bg-color, #fff); display: flex; border-top: 1px solid #ddd; z-index: 1000; }
-        nav div { flex: 1; text-align: center; padding: 12px 0; font-size: 11px; cursor: pointer; opacity: 0.6; transition: 0.2s; }
-        nav div.active-nav { opacity: 1; color: var(--primary); font-weight: bold; border-top: 2px solid var(--primary); }
+        nav { position: fixed; bottom: 0; width: 100%; background: var(--tg-theme-secondary-bg-color, #fff); display: flex; border-top: 1px solid #ddd; box-shadow: 0 -2px 10px rgba(0,0,0,0.05); }
+        nav div { flex: 1; text-align: center; padding: 15px 0; font-size: 11px; cursor: pointer; opacity: 0.5; }
+        nav div.active-nav { opacity: 1; color: var(--primary); font-weight: bold; border-top: 3px solid var(--primary); }
 
-        /* Card Styles */
-        .card { background: var(--tg-theme-secondary-bg-color, #fff); border-radius: 15px; padding: 15px; margin-bottom: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
-        .balance-text { font-size: 32px; font-weight: 800; color: var(--success); }
-        
-        /* Table Styles */
-        .table-container { overflow-x: auto; margin-top: 10px; }
-        table { width: 100%; border-collapse: collapse; font-size: 12px; }
-        th, td { padding: 10px; text-align: left; border-bottom: 1px solid #eee; }
-        .status-pending { color: orange; font-weight: bold; }
-        .status-approved { color: green; font-weight: bold; }
-        .pagination { display: flex; justify-content: space-between; align-items: center; margin-top: 10px; }
+        /* UI Components */
+        .card { background: var(--tg-theme-secondary-bg-color, #fff); border-radius: 16px; padding: 20px; margin-bottom: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.05); text-align: center; }
+        .balance { font-size: 36px; font-weight: 900; color: var(--success); margin: 10px 0; }
+        .btn { background: var(--primary); color: #fff; border: none; padding: 14px; border-radius: 12px; width: 100%; font-weight: bold; cursor: pointer; transition: 0.2s; }
+        .btn:active { transform: scale(0.98); opacity: 0.9; }
 
-        /* Buttons */
+        /* Table & Lists */
+        .table-wrap { background: #fff; border-radius: 12px; overflow: hidden; margin-top: 10px; }
+        table { width: 100%; border-collapse: collapse; font-size: 13px; }
 
-        .btn { background: var(--primary); color: #fff; border: none; padding: 12px; border-radius: 10px; width: 100%; font-weight: bold; cursor: pointer; }
-        .btn-small { padding: 5px 10px; width: auto; font-size: 10px; border-radius: 5px; margin: 2px; }
-        .btn-danger { background: var(--danger); }
+        th { background: #f8f9fa; padding: 12px; text-align: left; color: #666; }
+        td { padding: 12px; border-top: 1px solid #eee; }
+        .badge { padding: 4px 8px; border-radius: 6px; font-size: 10px; font-weight: bold; text-transform: uppercase; }
+        .pending { background: #fff3cd; color: #856404; }
+        .approved { background: #d4edda; color: #155724; }
+        .rejected { background: #f8d7da; color: #721c24; }
 
         /* Chat */
-        #chat-area { height: 250px; overflow-y: auto; display: flex; flex-direction: column; gap: 10px; margin-bottom: 10px; padding: 10px; background: rgba(0,0,0,0.03); border-radius: 10px; }
-        .bubble { padding: 8px 12px; border-radius: 15px; max-width: 80%; word-wrap: break-word; }
-        .bubble.me { align-self: flex-end; background: var(--primary); color: #fff; }
-        .bubble.them { align-self: flex-start; background: #e9e9eb; color: #000; }
+        #chat-window { height: 300px; overflow-y: auto; background: rgba(0,0,0,0.02); border-radius: 12px; padding: 15px; display: flex; flex-direction: column; gap: 8px; margin-bottom: 10px; border: 1px solid #eee; }
+        .msg { padding: 10px 14px; border-radius: 18px; max-width: 80%; font-size: 14px; line-height: 1.4; position: relative; }
+        .msg.me { align-self: flex-end; background: var(--primary); color: #fff; border-bottom-right-radius: 4px; }
+        .msg.them { align-self: flex-start; background: #fff; color: #333; border-bottom-left-radius: 4px; box-shadow: 0 2px 4px rgba(0,0,0,0.05); }
+
+        /* Admin Gate */
+        #admin-lock { text-align: center; padding: 50px 20px; }
+        .pass-input { width: 100%; padding: 15px; border-radius: 10px; border: 1px solid #ddd; font-size: 18px; text-align: center; margin-bottom: 15px; box-sizing: border-box; }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <!-- HOME PAGE -->
-    <div id="page-home" class="page active">
+    <!-- PAGE: EARN -->
+    <div id="p-earn" class="page active">
         <div class="card">
-            <div id="username-display" style="font-weight: bold;">Loading...</div>
-            <div class="balance-text" id="balance-display">₱ 0.000</div>
+            <div id="u-name" style="opacity: 0.7;">Welcome back</div>
+            <div class="balance" id="u-balance">₱ 0.000</div>
         </div>
-        <h3>Daily Rewards</h3>
-        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
-            <button class="btn" onclick="triggerAd('task-21469')">Task 1</button>
-            <button class="btn" onclick="triggerAd('task-21424')">Task 2</button>
-            <button class="btn" onclick="triggerAd('21470')">Task 3</button>
-            <button class="btn" onclick="triggerAd('int-21471')">Task 4</button>
-            <button class="btn" onclick="triggerAd('21423')">Task 5</button>
-            <button class="btn" onclick="triggerAd('int-21422')">Task 6</button>
+        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px;">
+            <button class="btn" onclick="showAd('task-21469')">Gift 1</button>
+            <button class="btn" onclick="showAd('task-21424')">Gift 2</button>
+            <button class="btn" onclick="showAd('21470')">Gift 3</button>
+            <button class="btn" onclick="showAd('int-21471')">Gift 4</button>
+            <button class="btn" onclick="showAd('21423')">Gift 5</button>
+            <button class="btn" onclick="showAd('int-21422')">Gift 6</button>
         </div>
     </div>
 
-    <!-- CHAT PAGE -->
-    <div id="page-chat" class="page">
-        <h3>📙 Global Chat 📘</h3>
-        <div id="chat-area"></div>
-        <div style="display: flex; gap: 5px;">
-            <input type="text" id="msg-input" placeholder="Type a message..." style="flex:1; padding: 10px; border-radius: 8px; border: 1px solid #ddd;">
-            <button class="btn" style="width: 80px;" onclick="sendChatMsg()">Send</button>
+    <!-- PAGE: CHAT -->
+    <div id="p-chat" class="page">
+        <div id="chat-window"></div>
+        <div style="display: flex; gap: 8px;">
+            <input type="text" id="chat-in" placeholder="Say something..." style="flex:1; padding: 14px; border-radius: 12px; border: 1px solid #ddd;">
+            <button class="btn" style="width: 80px;" onclick="postChat()">Send</button>
         </div>
-        <p style="font-size: 10px; color: gray;">*Costs 3 Ads. Earns ₱0.015. 3min Cooldown.</p>
+        <div style="font-size: 11px; margin-top: 8px; color: #666; text-align: center;">
+            Watch 3 Ads to send + Earn ₱0.015 (3min Cooldown)
+        </div>
     </div>
 
-    <!-- WALLET PAGE -->
-    <div id="page-wallet" class="page">
-        <h3>Withdrawal (GCash)</h3>
+    <!-- PAGE: WALLET -->
+    <div id="p-wallet" class="page">
         <div class="card">
-            <input type="number" id="wd-amount" placeholder="Amount (min 0.02)" step="0.01" style="width: 100%; padding: 10px; margin-bottom: 10px; box-sizing: border-box;">
-            <input type="text" id="wd-gcash" placeholder="GCash Number" style="width: 100%; padding: 10px; margin-bottom: 10px; box-sizing: border-box;">
-            <button class="btn" onclick="submitWithdrawal()">Request Withdrawal</button>
+            <h3>GCash Withdrawal</h3>
+            <input type="number" id="wd-amt" placeholder="Amount (Min 0.02)" class="pass-input" style="font-size: 16px;">
+            <input type="text" id="wd-phone" placeholder="GCash Number" class="pass-input" style="font-size: 16px;">
+            <button class="btn" onclick="reqWithdraw()">Withdraw Now</button>
         </div>
-        <h4>Your History</h4>
-        <div class="table-container">
-            <table id="user-wd-table">
+        <h4>History</h4>
+        <div class="table-wrap">
+            <table id="wd-history">
                 <thead><tr><th>Date</th><th>Amount</th><th>Status</th></tr></thead>
-                <tbody id="user-wd-body"></tbody>
+                <tbody id="wd-history-body"></tbody>
             </table>
         </div>
-        <div class="pagination">
-            <button class="btn btn-small" onclick="paginateUserWD('prev')">Prev</button>
-            <button class="btn btn-small" onclick="paginateUserWD('next')">Next</button>
-        </div>
     </div>
 
-    <!-- ADMIN PAGE -->
-    <div id="page-admin" class="page">
-        <h3>Owner Dashboard</h3>
-        <div class="table-container">
-            <table>
-                <thead><tr><th>User</th><th>Amount</th><th>GCash</th><th>Action</th></tr></thead>
-                <tbody id="admin-wd-body"></tbody>
-
-</table>
+    <!-- PAGE: ADMIN -->
+    <div id="p-admin" class="page">
+        <div id="admin-login">
+            <div id="admin-lock" class="card">
+                <h3>Admin Dashboard</h3
+                <input type="password" id="admin-pass" placeholder="Enter Password" class="pass-input">
+                <button class="btn" onclick="checkPass()">Unlock Dashboard</button>
+            </div>
         </div>
-        <div class="pagination">
-            <button class="btn btn-small" onclick="paginateAdmin('prev')">Prev</button>
-            <button class="btn btn-small" onclick="paginateAdmin('next')">Next</button>
+        <div id="admin-content" style="display: none;">
+            <h3>Pending Requests</h3>
+            <div class="table-wrap">
+                <table>
+                    <thead><tr><th>User</th><th>Amount</th><th>GCash</th><th>Actions</th></tr></thead>
+                    <tbody id="admin-table-body"></tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
 
 <nav>
-    <div onclick="navTo('home')" id="nav-home" class="active-nav">🏠 Home</div>
-    <div onclick="navTo('chat')" id="nav-chat">💬 Chat</div>
-    <div onclick="navTo('wallet')" id="nav-wallet">💰 Wallet</div>
-    <div onclick="navTo('admin')" id="nav-admin" style="display: none;">👑 Owner</div>
+    <div onclick="toPage('earn')" id="n-earn" class="active-nav">🏠 Earn</div>
+    <div onclick="toPage('chat')" id="n-chat">💬 Chat</div>
+    <div onclick="toPage('wallet')" id="n-wallet">💰 Wallet</div>
+    <div onclick="toPage('admin')" id="n-admin">🔑 Admin</div>
 </nav>
 
 <script type="module" src="app.js"></script>
